[package]
name = "bella"
version = "0.0.5"
description = "DLC Dev Kit client"
authors = ["benny b <ben@bitcoinbay.dev>"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
dlc-dev-kit = { path = "../../ddk" }
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.75"
tokio = { version = "1.35.0", features = ["full"] }
futures = "0.3.30"
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1", features = ["colored"] }
log = "^0.4"
futures-util = "0.3.30"
env_logger = "0.11.3"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
